<?xml version="1.0"?>
<package format="2">
  <name>local_grid_map</name>
  <version>0.1.0</version>
  <description>The local_grid_map package</description>
  <maintainer email="anthony.cavin.ac@gmail.com">anthony</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>compressed_image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>grid_map_core</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_filters</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_octomap</build_depend>
  <build_depend>grid_map_rviz_plugin</build_depend>
  <build_depend>grid_map_visualization</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>theora_image_transport</build_depend>
  <build_export_depend>compressed_image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>grid_map_core</build_export_depend>
  <build_export_depend>grid_map_ros</build_export_depend>
  <build_export_depend>grid_map_cv</build_export_depend>
  <build_export_depend>grid_map_filters</build_export_depend>
  <build_export_depend>grid_map_loader</build_export_depend>
  <build_export_depend>grid_map_msgs</build_export_depend>
  <build_export_depend>grid_map_octomap</build_export_depend>
  <build_export_depend>grid_map_rviz_plugin</build_export_depend>
  <build_export_depend>grid_map_visualization</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>theora_image_transport</build_export_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>grid_map_core</exec_depend>
  <exec_depend>grid_map_ros</exec_depend>
  <exec_depend>grid_map_cv</exec_depend>
  <exec_depend>grid_map_filters</exec_depend>
  <exec_depend>grid_map_loader</exec_depend>
  <exec_depend>grid_map_msgs</exec_depend>
  <exec_depend>grid_map_octomap</exec_depend>
  <exec_depend>grid_map_rviz_plugin</exec_depend>
  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>theora_image_transport</exec_depend>
</package>
